fixed headers, added ifrequire, made comment format more consistent, set seed, added regression to first plot and discussion

--- a/Pokemon Project.Rmd
+++ b/Pokemon Project.Rmd
@@ -1,16 +1,15 @@
 ---
 title: "Pokemon Breeding Analysis"
 author: "Roland Hentz"
-date: "7 September, 2018"
-output: html_document
+output: pdf_document
 ---
 
-#Abstract  
+# Abstract  
 
-Using a bootstrap method that depended upon open knowledge of a few of the mechanics of the video game Pokémon Sun, different methods of acquiring highly powerful Pokémon were compared. Graphical analysis gave insight into the benefit and cost of different acquisition methods. Final analysis allowed for the recommendation of the most efficient method of obtaining the most powerful Pokémon of a given species. The most efficient method to acquire Pokémon with high individual values is to breed Pokémon starting with a Destiny Knot and with an initial parent chained to have five perfect IVs. If the player has selected a Pokémon whose attack style matters, then some time may be saved by ignoring the unused attack style.
+  Using a simulation method that depended upon open knowledge of a few of the mechanics of the video game Pok?mon Sun, different methods of acquiring highly powerful Pok?mon were compared. Graphical analysis gave insight into the benefit and cost of different acquisition methods. Final analysis allowed for the recommendation of the most efficient method of obtaining the most powerful Pok?mon of a given species. The most efficient method to acquire Pok?mon high individual values is to breed Pok?mon starting with a Destiny Knot and with an initial parent chained to have five perfect IVs. If the player has selected a Pok?mon whose attack style matters, then some time may be saved by ignoring the unused attack style.
 
 ```{r function.setup, echo=FALSE}
-#install.packages("ggplot2")
+if(!require(ggplot2)) install.packages("ggplot2")
 library(ggplot2)
 
 wild_sim <- function(iter) {
@@ -286,45 +285,47 @@ reparam <- function(poke.frame,post) {
 
 ```
 
-#Introduction  
+# Introduction  
 
-  In the popular video game series Pokémon, players capture, train, and battle with digital monsters called Pokémon. Each of these monsters has six statistics which the player can view that communicate the effectiveness of that Pokémon in a battle. Those statistics are calculated using values innate to a species of that Pokémon (base statistics), values accumulated through training (effort values), and values assigned to a Pokémon at birth or capture (individual values). Base statistics are immutable, and effort values are relatively easily assigned. The focus of this project is on a Pokémon's individual values. In this paper, individual values will be referred to as IVs. 
+  In the popular video game series Pok?mon, players capture, train, and battle with digital monsters called Pok?mon. Each of these monsters has six statistics, which the player can view, that communicate the effectiveness of that Pok?mon in a battle. Those statistics are calculated using values innate to a species of that Pok?mon (base statistics), values accumulated through training (effort values), and values assigned to a Pok?mon at birth or capture (individual values). Base statistics are immutable, and effort values are easily assigned by a motivated player. The focus of this project is on a Pok?mon's individual values. In this paper, individual values will be referred to as IVs.  
   
-  Each of the Pokémon's six statistics has an IV between zero and thirty-one that is randomly assigned upon capture or birth. These cannot be changed at any time or in any way during the lifetime of the Pokémon. IVs have a rather high weight when used in calculating a Pokémon's visible statistics. In other words, IVs matter tremendously when a Pokémon makes it into a battle. While the mechanics are very similar across multiple generations of the game series, this paper has been written to match the mechanics of Pokémon Sun and Moon.  
+  Each of the Pok?mon's six statistics has an IV between zero and thirty-one that is randomly assigned upon capture or birth. These cannot be changed at any time or in any way during the lifetime of the Pok?mon. IVs have a rather high weight when used in calculating a Pok?mon's visible statistics. In other words, IVs matter tremendously when a Pok?mon makes it into a battle. While the mechanics are very similar across multiple generations of the game series, this paper has been written to match the mechanics of Pok?mon Sun and Moon.  
   
-  There are two main methods for acquiring Pokémon with high IVs. The first is breeding. By taking two Pokémon of breedable species to a Pokémon day-care center within the video game, the player will be given an egg of the female Pokémon's species. This new Pokémon will inherit three out of its six IVs from its parents. Using an item called the Destiny Knot, a bred Pokémon inherits five out of its six IVs from its parents. The parent each inherited IV comes from is random. When an egg Pokémon is born that has better IVs than its parent of that gender, the parent is replaced with the child to progressively increase the IVs of the parents.  
+  There are two main methods for acquiring Pok?mon with high IVs. The first is breeding. By taking two Pok?mon of breedable species to a Pok?mon day-care center within the video game, the player will be given an egg of the female Pok?mon's species. This new Pok?mon will inherit three out of its six IVs from its parents. Using an item called the Destiny Knot, a bred Pok?mon inherits five out of its six IVs from its parents. The parent each inherited IV comes from is random. When an egg Pok?mon is born that has better IVs than its parent of that gender, the parent is replaced with the child to progressively increase the IVs of the parents.  
   
-  The other method of acquiring high IV Pokémon is called ally-chaining. In this method, a player first engages a Pokémon of the desired species in combat. Next, the player weakens that Pokémon's health, causing it to summon another Pokémon as an "ally" to assist it in battle. After repeating this second step thirty times, the Pokémon summoned will have four perfect IVs. Only one Pokémon may be caught in each ally-chaining episode.  
+  The other method of acquiring high IV Pok?mon is called ally-chaining. In this method, a player first engages a Pok?mon of the desired species in combat. Next, the player weakens that Pok?mon's health, causing it to summon another Pok?mon as an "ally" to assist it in battle. After repeating this second step thirty times, the Pok?mon summoned will have four perfect IVs. Only one Pok?mon may be caught in each ally-chaining episode.  
   
-  Each of these methods can be relatively time-consuming, and there are a handful of ways to modify each, such as using the Destiny Knot. Therefore, this paper will answer the question of which method of obtaining Pokémon with high IVs is the most efficient.  
+  Each of these methods can be relatively time-consuming, and there are a handful of ways to modify each, such as using the Destiny Knot. Therefore, this paper will answer the question of which method of obtaining Pok?mon with high IVs is the most efficient.  
 
-#Materials and Methods  
+# Materials and Methods  
 
-  To solve this problem, a series of distributions were generated using random sampling and Pokémon game mechanics. Since most of the Pokémon game mechanics are quite-well known to enthusiasts and any internet-user with the time and interest, the distributions were generated using exactly the same rules as the video game series. As such, the R simulation perfectly emulates a player performing each of the methods analyzed.  
+  To solve this problem, a series of distributions were generated using random sampling and Pok?mon game mechanics. Since most of the Pok?mon game mechanics are quite-well known to enthusiasts and any internet-user with the time and interest, the distributions were generated using exactly the same rules as the video game series. As such, the R simulation perfectly emulates a player performing each of the methods analyzed.  
   
-  Two variables that require explanation right away are threshold and time. The threshold variable is an integer that represents the value that a Pokémon's sum of IVs must surpass in order to be considered a success. In breeding, that is the point at which breeding is started over from scratch again. In ally-chaining, the threshold simply measure which Pokémon are acceptable products of the method. The other variable to explain now is time. This variable measures time in minutes to acquire a Pokémon that meets the given threshold requirement.  
+  Two variables that require explanation right away are threshold and time. The threshold variable is an integer that represents the value that a Pok?mon's sum of IVs must surpass in order to be considered a success. In breeding, that is the point at which breeding is started over from scratch again. In ally-chaining, the threshold simply measure which Pok?mon are acceptable products of the method. The other variable to explain now is time. This variable measures time in minutes to acquire a Pok?mon that meets the given threshold requirement.  
   
   *Threshold values are 186 (all six IVs are perfect), 180, 174, 168, 162, and 156*  
 
 ```{r dist.gen, echo=FALSE, include=FALSE}
-
+# use the year Pokemon Ruby was released as the seed
+set.seed(2003)
 iter <- 10^4
 alpha <- frame_gen(iter)
 
 ```
 
-#Results  
+# Results  
 
-  Each of the two previously mentioned methods of obtaining high-IV Pokémon have a few different cases to consider. We begin with considering breeding. The first variable to look at is the Destiny Knot. This item increases the number of IVs inherited from a bred Pokémon's parents from three to five. In the scatter plot and box plot, higher values of time, along the y-axis, are worse because they correspond to a greater amount of time needed to acquire an acceptable Pokémon using the given method and conditions. In the scatter plot, the blue points (cases not using the knot) appear to be clustered above the red points (cases using the knot). The box plot clearly shows that, at each of the points of measurement used to generate the plot, not using a knot takes quite a bit longer than using one.  
+  Each of the two previously mentioned methods of obtaining high-IV Pok?mon have a few different cases to consider. We begin with considering breeding. The first variable to look at is the Destiny Knot. This item increases the number of IVs inherited from a bred Pok?mon's parents from three to five. In the scatter plot and box plot, higher values of time, along the y-axis, are worse because they correspond to a greater amount of time needed to acquire an acceptable Pok?mon using the given method and conditions. In the scatter plot, the blue points (cases not using the knot) appear to be clustered above the red points (cases using the knot). Overlaying a linear regression makes this observation more clear. At no point do either regression line fall inside the other line's confidence interval. This indicates that the use of a knot reduces the time spent breeding. The box plot further shows that, at each of the points of measurement used to generate the plot, not using a knot takes quite a bit longer than using one.  
 
 ```{r breeding.condition1, echo=FALSE, warning=FALSE}
 beta <- reparam(alpha,FALSE)
 gamma <- subset(beta, beta$bred == "bred")
 
-#knot is good
+# knot is good
 ggplot(gamma, aes(thold, time, color=knot)) +
   geom_jitter() +
   scale_y_log10() +
+  geom_smooth(method = "lm") +
   labs(color="Use of Destiny Knot", x="IV Sum Threshold", y="Time")
 
 ggplot(gamma, aes(knot, time)) +
@@ -334,17 +335,18 @@ ggplot(gamma, aes(knot, time)) +
 
 ```
 
-  The next condition to consider is what we will refer to as attack style. For most Pokémon, only five out of its six IVs are truly important. This is because two of the IVs are used exclusively to one another to calculate attack damage, based on the style of attack used. Almost all Pokémon have a preferred attack style that depends on the Pokémon's base stats and available attacks. Whether or not attack style matters is generally inherent to the Pokémon the player wishes to use, meaning that it is not necessarily a variable the player chooses to manipulate. However, we will look at whether or not time is saved by ignoring the unused attack IV when breeding.  
+  The next condition to consider is what we will refer to as attack style. For most Pok?mon, only five out of its six IVs are truly important. This is because two of the IVs are used exclusively to one another to calculate attack damage, based on the style of attack used. Almost all Pok?mon have a preferred attack style that depends on the Pok?mon's base stats and available attacks. Whether or not attack style matters is generally inherent to the Pok?mon the player wishes to use, meaning that it is not necessarily a variable the player chooses to manipulate. However, we will look at whether or not time is saved by ignoring the unused attack IV when breeding.  
   
   The scatter plot colored by whether attack style is considered does not suggest that attack style saves time. The points appear to be distributed quite evenly. The box plot suggests a very modest amount of time saved by considering attack style.  
 
 ```{r breeding.condition2, echo=FALSE, warning=FALSE}
-#atk style matters, just not as much as the knot
-#atk style also is generally chosen by the pokemon rather than the player
+# atk style matters, just not as much as the knot
+# atk style also is generally chosen by the pokemon rather than the player
 ggplot(gamma, aes(thold, time, color=atkst)) +
   geom_jitter() +
   scale_y_log10() +
-  labs(color="Consideration of Attack Style", x="IV Sum Threshold", y="Time")
+  labs(color="Consideration of Attack Style", x="IV Sum Threshold", y="Time") +
+  geom_smooth()
 
 ggplot(gamma, aes(atkst, time)) +
   geom_boxplot() +
@@ -353,12 +355,12 @@ ggplot(gamma, aes(atkst, time)) +
 
 ```
 
-  The next breeding condition to analyze is the IV sum of the initial parents in a breeding session. The player may re-use a Pokémon that has been chained to guarantee at least four perfect IVs across breeding sessions. While it only takes a single chaining session to acquire a Pokémon with four perfect IVs, a player may continue to chain Pokémon in order to catch one with five or even all six perfect IVs with better odds than without chaining. Now we will examine the cases of using a totally random wild Pokémon as the initial parent and parents chained to four, five, and six perfect IVs.  
+  The next breeding condition to analyze is the IV sum of the initial parents in a breeding session. The player may re-use a Pok?mon that has been chained to guarantee at least four perfect IVs across breeding sessions. While it only takes a single chaining session to acquire a Pok?mon with four perfect IVs, a player may continue to chain Pok?mon in order to catch one with five or even all six perfect IVs with better odds than without chaining. Now we will examine the cases of using a totally random wild Pok?mon as the initial parent and parents chained to four, five, and six perfect IVs.  
   
-  In the scatter plot, large circles show Pokémon that were bred with a Destiny Knot, small circles without. It appears quite clearly that across the cases of Destiny Knot usage, the more an initial parent is chained to perfect IVs, the faster breeding is. The box plot demonstrates this phenomenon quite well. What must also be taken into consideration beyond just time saved by chaining is how much time it would take to acquire a Pokémon with a given number of perfect IVs. Because the values for time are positively-skewed, and because some values for time are infinity (meaning a Pokémon meeting the threshold requirement was never acquired with that method), we will look at the median of time across cases of chaining the initial parent in breeding. Additionally, the median offers some interpretive benefit by allowing a player to see below or above which point they have a one in two chance of falling. The median for not chaining, care reported below.  
+  In the scatter plot, large circles show Pok?mon that were bred with a Destiny Knot, small circles without. It appears quite clearly that across the cases of Destiny Knot usage, the more an initial parent is chained to perfect IVs, the faster breeding is. The box plot demonstrates this phenomenon quite well. What must also be taken into consideration beyond just time saved by chaining is how much time it would take to acquire a Pok?mon with a given number of perfect IVs. Because the values for time are positively-skewed, and because some values for time are infinity (meaning a Pok?mon meeting the threshold requirement was never acquired with that method), we will look at the median of time across cases of chaining the initial parent in breeding. Additionally, the median offers some interpretive benefit by allowing a player to see below or above which point they have a one in two chance of falling. The median for not chaining, care reported below.  
 
 ```{r breeding.condition3, echo=FALSE, warning=FALSE, message=FALSE}
-#does chaining matter
+# does chaining matter
 ggplot(gamma, aes(thold, time, color=chained, size=knot)) +
   geom_jitter() +
   scale_y_log10() +
@@ -377,30 +379,30 @@ ggplot(gamma,(aes(time, stat(density)))) +
 for (t in c("0","4","5","6")) {
   cat("Median for chaining to ", t, " IVs: ", median(as.numeric(gamma$time[gamma$chained==t])), " minutes.\n")
   }
-#how much time saved by chaining: a lot by a 4 chain, a little by a 5 chain
+# how much time saved by chaining: a lot by a 4 chain, a little by a 5 chain
 ```
 
-  Next we must ask how much time it takes to acquire a five IV initial parent or a six IV initial parent. Remember that we need only capture one since we can re-use the initial parent for each breeding. The median time to capture a five IV parent is and the median time for a six IV parent are each reported below. Chaining up to a five IV parent will save the player time if the player intends to breed at a minimum five Pokémon. Chaining to a six IV parent would save time only if the player intended to breed around five-hundred Pokémon.  
+  Next we must ask how much time it takes to acquire a five IV initial parent or a six IV initial parent. Remember that we need only capture one since we can re-use the initial parent for each breeding. The median time to capture a five IV parent is and the median time for a six IV parent are each reported below. Chaining up to a five IV parent will save the player time if the player intends to breed at a minimum five Pok?mon. Chaining to a six IV parent would save time only if the player intended to breed around five-hundred Pok?mon.  
 
 ```{r breeding.condition4, echo=FALSE}
-#odds of 6iv ditto is on gamefaqs (out of the question)
-#odds of 5 iv ditto P(A)=2/31
+# odds of 6iv ditto is on gamefaqs (out of the question)
+# odds of 5 iv ditto P(A)=2/31
 delta <- data.frame(val <- rgeom(10^5,2/31))
-cat("Median time to capture a five IV Pokémon by chaining: ",median(delta$val)*15," minutes.\n")
+cat("Median time to capture a five IV Pok?mon by chaining: ",median(delta$val)*15," minutes.\n")
 
-#test of the 6 iv ditto for fun
+# test of the 6 iv ditto for fun
 delta2 <- data.frame(val <- rgeom(10^5,1/(31*31)))
-cat("Median time to capture a six IV Pokémon by chaining: ",median(delta2$val)*15," minutes.")
-#chaining to 5 ditto worth it, but not for 6 ditto
+cat("Median time to capture a six IV Pok?mon by chaining: ",median(delta2$val)*15," minutes.")
+# chaining to 5 ditto worth it, but not for 6 ditto
 
 ```
 
-  Now that we have seen all cases for breeding, we will look at capturing Pokémon. The three cases to consider are catching completely wild Pokémon with no other strategies implemented, ally-chaining, and ally-chaining considering attack style. These cases are coded by color in the scatter plot below. Catching Pokémon completely wild appears to take dramatically longer than chaining. Chaining when considering attack style actually slows down the process of acquiring a high IV Pokémon in this case. This is because a Pokémon that matches the threshold when considering all six IVs may have to be rejected on the basis of much of its IV sum coming from its useless attack style. Chained Pokémon with the correct attack style are slightly less common.  
+  Now that we have seen all cases for breeding, we will look at capturing Pok?mon. The three cases to consider are catching completely wild Pok?mon with no other strategies implemented, ally-chaining, and ally-chaining considering attack style. These cases are coded by color in the scatter plot below. Catching Pok?mon completely wild appears to take dramatically longer than chaining. Chaining when considering attack style actually slows down the process of acquiring a high IV Pok?mon in this case. This is because a Pok?mon that matches the threshold when considering all six IVs may have to be rejected on the basis of much of its IV sum coming from its useless attack style. Chained Pok?mon with the correct attack style are slightly less common.  
   
   *To make the calculation for the attack style chained captures, the threshold value was multiplied by five-sixths.*  
 
 ```{r capture.conditions, echo=FALSE}
-#chain catching and wild-caught
+# chain catching and wild-caught
 epsilon <- subset(beta, beta$bred != "bred")
 
 ggplot(epsilon,aes(thold,time,color=catch.type)) +
@@ -412,25 +414,25 @@ ggplot(epsilon,aes(thold,time,color=catch.type)) +
 
 
 
-#Discussion
+# Discussion
 
-  Across chaining and breeding, a set of ideal conditions can be selected. These are plotted below by color. Remember that attack style is generally chosen by the Pokémon, not by the player, but does have an impact on time. Ideal breeding conditions are to use the Destiny Knot and to start breeding with a five IV initial parent. Ideal chaining is essentially just regular chaining, as there are not optional techniques that are in question of saving time. Here we can see that the best method is to breed using the aforementioned techniques. If the player is lucky and chooses a Pokémon whose attack style matters, he or she will save just a little bit more time.  
+  Across chaining and breeding, a set of ideal conditions can be selected. These are plotted below by color. Remember that attack style is generally chosen by the Pok?mon, not by the player, but does have an impact on time. Ideal breeding conditions are to use the Destiny Knot and to start breeding with a five IV initial parent. Ideal chaining is essentially just regular chaining, as there are not optional techniques that are in question of saving time. Here we can see that the best method is to breed using the aforementioned techniques. If the player is lucky and chooses a Pok?mon whose attack style matters, he or she will save just a little bit more time.  
 
 ```{r final.analysis, echo=FALSE}
 beta <- reparam(alpha,TRUE)
 
-#now compare knot with attack style, 5 chain against chained with attack style
+# now compare knot with attack style, 5 chain against chained with attack style
 zeta <- subset(beta,catch.type=="ideal breeding"|catch.type=="ideal chaining")
 ggplot(zeta,aes(thold,time,color=catch.type,shape=atkst)) +
   geom_point() +
   scale_y_log10() +
   labs(color="Acquisition Method", x="IV Sum Threshold", y="Time")
 
-#conclusion: breed with knot and a 5 chain starting parent to w/e threshold
+# conclusion: breed with knot and a 5 chain starting parent to w/e threshold
 ```
 
 
-#Literature Cited  
+# Literature Cited  
 
 https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf  
 https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf  
@@ -442,10 +444,12 @@ https://stackoverflow.com/questions/8214303/conditional-replacement-of-values-in
 
 \newpage
 
+# Code Appendix  
+
 ```{r code.appendix, eval=FALSE}
 # Chunk 1
 
-#install.packages("ggplot2")
+if(!require(ggplot2)) install.packages("ggplot2")
 library(ggplot2)
 
 wild_sim <- function(iter) {
@@ -787,11 +791,11 @@ for (t in c("0","4","5","6")) {
 #odds of 6iv ditto is on gamefaqs (out of the question)
 #odds of 5 iv ditto P(A)=2/31
 delta <- data.frame(val <- rgeom(10^5,2/31))
-cat("Median time to capture a five IV Pokémon by chaining: ",median(delta$val)*15," minutes.\n")
+cat("Median time to capture a five IV Pok?mon by chaining: ",median(delta$val)*15," minutes.\n")
 
 #test of the 6 iv ditto for fun
 delta2 <- data.frame(val <- rgeom(10^5,1/(31*31)))
-cat("Median time to capture a six IV Pokémon by chaining: ",median(delta2$val)*15," minutes.")
+cat("Median time to capture a six IV Pok?mon by chaining: ",median(delta2$val)*15," minutes.")
 #chaining to 5 ditto worth it, but not for 6 ditto
 
 
